# verify-rust

./: CMakeLists.txt  Cargo.toml  Kani_Runs.md  README.md
.github/workflows/: blacklist.cex.txt  blacklist.txt  blacklist.vac.txt  main.yml
artefact/: README
benchmark/: all_benchmarks.txt  aop_vs_eop_benchmarks.txt  benchmark_postprocess.csv  benchmark_postprocess_aop.csv  benchmark_postprocess_eop.csv  extract_testcases_from_postprocess.sh  postprocess_visualize.ipynb  reframe_test.py  run_benchmark.py  run_postprocess.py
cmake/: SeaHornBuild.cmake  extract_tests.cmake.in  extract_unsat_tests.cmake.in
docker/: verify-rust.Dockerfile
scripts/: add-job  rust-jobs.json
src/: CMakeLists.txt  sea.yaml  sea_cex_base.yaml
src/lib/custom-print-no-std/: CMakeLists.txt  Cargo.toml  README.md
src/lib/seavec/: Cargo.toml
src/lib/seavec/src/: lib.rs  sea_vec.rs
src/rust-jobs/: CMakeLists.txt
src/rust-jobs/add/: CMakeLists.txt  Cargo.toml  add.c  lib.rs
src/rust-jobs/borsh/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/borsh-enum/: Cargo.toml  lib.rs
src/rust-jobs/borsh-option/: Cargo.toml  lib.rs
src/rust-jobs/borsh-primitives/: Cargo.toml  lib.rs
src/rust-jobs/borsh-structs/: Cargo.toml  lib.rs
src/rust-jobs/cfg-simplify/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/copy_stack_buffer/: Cargo.toml  lib.rs
src/rust-jobs/custom-print/: Cargo.toml  lib.rs
src/rust-jobs/custom-print-no-std/: Cargo.toml  lib.rs
src/rust-jobs/custom-print-writer/: Cargo.toml  lib.rs
src/rust-jobs/custom-vec/: CMakeLists.txt  Cargo.toml  custom-vec.c  lib.rs  sea.yaml
src/rust-jobs/custom-vec-drain/: Cargo.toml  lib.rs
src/rust-jobs/custom-vec-final/: Cargo.toml  lib.rs
src/rust-jobs/custom-vec-loop-unroll/: Cargo.toml  lib.rs
src/rust-jobs/custom-vec-raw_vec/: Cargo.toml  lib.rs
src/rust-jobs/custom-vec-zst-alignment-issue/: Cargo.toml  lib.rs
src/rust-jobs/empty-print/: Cargo.toml  lib.rs
src/rust-jobs/enum-as-param/: Cargo.toml  lib.rs
src/rust-jobs/mock-test1/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/mut_ref_on_stack/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/option/: Cargo.toml  lib.rs
src/rust-jobs/option-and-then/: Cargo.toml  lib.rs
src/rust-jobs/option-is-some-and/: Cargo.toml  lib.rs
src/rust-jobs/option-or/: Cargo.toml  lib.rs
src/rust-jobs/option-unwrap-or/: Cargo.toml  lib.rs
src/rust-jobs/option-vec-map/: CMakeLists.txt  Cargo.toml  lib.rs  sea.yaml
src/rust-jobs/panic-test/: Cargo.toml  lib.rs
src/rust-jobs/paper-example/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/pointer/: Cargo.toml  lib.rs
src/rust-jobs/pointer_same_arg/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/read_across_f/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/realloc-not-initiallized/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/result-and_then/: Cargo.toml  lib.rs
src/rust-jobs/result-as_deref/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/result-cloned/: Cargo.toml  lib.rs
src/rust-jobs/result-copied/: Cargo.toml  lib.rs
src/rust-jobs/result-iter_mut/: Cargo.toml  lib.rs
src/rust-jobs/result-transpose/: Cargo.toml  lib.rs
src/rust-jobs/result-unwrap_or_else/: Cargo.toml  lib.rs  result-unwrap_or_else.c
src/rust-jobs/ro_shared_references/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/sea-vec/: CMakeLists.txt  Cargo.toml  lib.rs  sea.yaml
src/rust-jobs/serde/: Cargo.toml  lib.rs
src/rust-jobs/smallvec/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-allocation/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/smallvec-allocation-bound2/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/smallvec-allocation-bound4/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-allocation-bound8/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-bound2/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/smallvec-bound4/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-bound8/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-drain-error/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-grow-error/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-insert-optimization/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-insert_many-error/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-insert_many-fix/: Cargo.toml  lib.rs
src/rust-jobs/smallvec-memory-leak/: Cargo.toml  lib.rs
src/rust-jobs/string/: Cargo.toml  lib.rs
src/rust-jobs/string-parse/: Cargo.toml  lib.rs
src/rust-jobs/string-to_string/: Cargo.toml  lib.rs
src/rust-jobs/tinyvec-arrayvec/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/tinyvec-arrayvec-aop/: CMakeLists.txt  Cargo.toml  sea.yaml
src/rust-jobs/tinyvec-capacity-error/: Cargo.toml  lib.rs
src/rust-jobs/tinyvec-remove-error/: Cargo.toml  lib.rs
src/rust-jobs/vec/: Cargo.toml  lib.rs
src/rust-jobs/vec-filter/: Cargo.toml  lib.rs
src/rust-jobs/vec-sort-reverse/: Cargo.toml  lib.rs
src/sea-lib/: Cargo.toml  rust_mem_override.c  seahorn.c
src/sea-lib/sea_nd_func/src/: Cargo.toml  lib.rs
src/sea-lib/src/: allocator.rs  error_handle.rs  lib.rs  seahorn.rs
src/seamock-lib/: Cargo.toml
src/seamock-lib/src/: lib.rs
src/verifier/src/: Cargo.toml  lib.rs
