cargo-features = ["profile-rustflags"]

[package]
name = "custom-print-writer-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
libc = "0.2"
cfg-if = "0.1.10"

[dependencies.verifier]
path = "../../verifier/src"
default-features = false
features = ["std"]

[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = ["std"]


[dependencies.custom-print]
version = "0.1.0"
default-features = false
features = ["alloc"]
