cargo-features = ["profile-rustflags"]

[package]
name = "option-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
libc = "0.2"
cfg-if = "0.1.10"

[dependencies.verifier]
path = "../../verifier/src"
default-features = false
features = ["std"]


[dependencies.sea]
path = "../../sea-lib"
default-features = false
features = ["std"]

[features]
default = []  # Specify other default features here, if any
feature_no_std = ["sea/std"]