cargo-features = ["profile-rustflags"]

[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "verifier"
crate-type = ["lib"]
path = "lib.rs"


[features]
std = ["sea/std"]
no_std = []  # Just default sea
panic_error = ["sea/panic_error"]

[dependencies]
cfg-if = "0.1.10"
sea = { path = "../../sea-lib", default-features = false, optional = false }
